--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 # it's better to unpack these files and commit the raw source
 npm_modules
 settings.json
+git-mania
+knexfile.js
+node_modules
 
 # git has its own built in compression methods
 *.7z
